# catdog-classifier

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.dvc/: config
.github/workflows/: pre-commit.yml
catdog/: .gitignore  infer.py  train.py  trained_models.dvc
catdog/config/: conf.yaml
catdog/data/: data_loaders.py
catdog/models/: cnn.py
catdog/utils/: data_loaders.py
catdog_classifier/: .gitignore  infer.py  train.py  trained_models.dvc
catdog_classifier/config/: conf.yaml
catdog_classifier/models/: cnn.py
catdog_classifier/test/: metrics.py  test.py
catdog_classifier/utils/: dvc_helpers.py  mlflow_helpers.py
