[tool.poetry]
name = "catdog-classifier"
version = "0.1.0"
description = ""
authors = ["Nikita Koshelev <koshelev.nd@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.9"
numpy = "^1.26.2"
torch = "^2.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
