[tool.poetry]
name = "catdog-classifier"
version = "0.1.0"
description = ""
authors = ["Nikita Koshelev <koshelev.nd@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.9"
numpy = "^1.26.2"
torch = "^2.1.1"
pre-commit = "^3.5.0"
torchvision = "^0.16.1"
matplotlib = "^3.8.2"
torchsummary = "^1.5.1"
scikit-learn = "^1.3.2"
tqdm = "^4.66.1"
scikit-image = "^0.22.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 90
target-version = ["py39"]

[tool.isort]
profile = "black"
line_length = 90
lines_after_imports = 2

[tool.flake8]
max-line-length = 120

[tool.nbqa.config]
black = "pyproject.toml"
isort = "pyproject.toml"
flake8 = "setup.cfg"
